--- a/GMS-JEDI-2.0-Flipkart-Java-Project/.classpath
+++ b/GMS-JEDI-2.0-Flipkart-Java-Project/.classpath
@@ -6,5 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="/Users/shubham.s9/Downloads/mysql-connector-j-8.0.33.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
